# AngryBirds

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README-PL.md  README.md  main.cpp  readme.sh
data/: save1.json
data/adventure/: adventure_level_1.json  adventure_level_10.json  adventure_level_11  adventure_level_12.json  adventure_level_13.json  adventure_level_14.json  adventure_level_2.json  adventure_level_3.json  adventure_level_4.json  adventure_level_5.json  adventure_level_6.json  adventure_level_7.json  adventure_level_8.json  adventure_level_9
data/custom/: custom_level_0.json  custom_level_1.json  custom_level_2.json  custom_level_3.json  custom_level_4.json
include/: cannon.hpp  contact_listener.hpp  exceptions.hpp  game.hpp  gui_manager.hpp  sound_manager.hpp  textures.hpp  widgets.hpp
include/entities/: entity.hpp  entity_manager.hpp
include/states/: about.hpp  adventure.hpp  custom.hpp  editor_state.hpp  game_state.hpp  lobby.hpp  loose.hpp  menu.hpp  result_state.hpp  state.hpp  win.hpp
src/: bird.cpp  bird.hpp  box.cpp  box.hpp  cannon.cpp  cannon.hpp  contact_listener.cpp  contact_listener.hpp  exceptions.hpp  game.cpp  game.hpp  gui_manager.cpp  gui_manager.hpp  sound_manager.cpp  sound_manager.hpp  textures.cpp  textures.hpp  widgets.cpp  widgets.hpp
src/entities/: basic_pig.cpp  basic_pig.hpp  bird.cpp  bird.hpp  box.cpp  box.hpp  entity.cpp  entity.hpp  entity_factory.cpp  entity_factory.hpp  entity_manager.cpp  entity_manager.hpp  glass.cpp  glass.hpp  pig.cpp  pig.hpp  stone.cpp  (+3 more)
tests/: CMakeLists.txt  main_test.cpp  test1.cpp
(+72 files in other folders)
